changed region to try out HA for masters

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,9 @@
 *.tfstate
 *.tfstate.backup
 .terraform/
+.terraform.tfstate.lock.info
 .idea/
 terraform.tfvars
 out/
-bin/
+bin/kops*
+bin/kubectl*
