--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,9 @@
-*.tfstate
-*.tfstate.backup
-.terraform/
-.terraform.tfstate.lock.info
+**/*.tfstate
+**/*.tfstate.backup
+**/.terraform/
+**/.terraform.tfstate.lock.info
 .idea/
-terraform.tfvars
-out/
-bin/kops*
-bin/kubectl*
+**/terraform.tfvars
+**/out/
+**/bin/kops*
+**/bin/kubectl*
